[tool.poetry]
name = "fast-ws"
version = "0.1.0"
description = ""
authors = ["Kant Sunthad <kant@sennalabs.com>"]

[tool.poetry.dependencies]
python = "^3.8"
uvicorn = {extras = ["standard"], version = "^0.15.0"}
fastapi = "^0.70.0"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
